Fix some errors with z-index in techs

--- a/styles.css
+++ b/styles.css
@@ -240,6 +240,7 @@ main {
     width: 90%;
     height: 40px;
     position: relative;
+    z-index: -5;
 }
 
 /* Proyectos */
@@ -450,7 +451,7 @@ footer {
 footer h4 {
     color: white;
     text-align: center;
-    font-size: 1.3rem;
+    font-size: 1.4rem;
     font-weight: 100;
 }
 
@@ -558,6 +559,10 @@ footer h4 {
         margin: 0 10px;
         padding: 1px;
     }
+
+    footer h4 {
+    font-size: 1.6rem;
+    }
 }
 
 @media (max-width: 768px) {
@@ -643,6 +648,9 @@ footer h4 {
         width: 100%;
         height: 50%;
     }
+    footer h4 {
+        font-size: 2rem;
+    }
 }
 
 /* Clases de Personalización y Funciones */
@@ -653,5 +661,3 @@ footer h4 {
 .active {
     display: flex;
 }
-
-/* NO PUDE HACER MÁS RESPONSIVO LA PARTE DE TECNOLOGÍAS, DEBIDO A QUE MAQUETÉ UNA TABLA, Y SOLO PODIA CAMBIAR TAMAÑOS. NO VI LA FORMA DE ACOMODAR LOS ELEMENTOS SIENDO TABLA, LA UNICA SOLUCIÓN VIABLE ERA CAMBIAR LA ESTRUCTURA, PERO ESO YA DEJARIA FUERA EL USO DE TABLAS. */
